# simonetto-devolucoes

./: .gitignore  README.md  build-exe.ps1  client.py  criar-atalho-cliente.ps1  iniciar-servidor.ps1  instalar-autostart.ps1  instalar-cliente.bat  liberar-firewall.ps1  main.py  pyproject.toml
app/: config.py  constants.py  db.py
app/models/: __init__.py  anexo.py  devolucao.py  historico.py  marca.py
app/repositories/: anexos_repo.py  devolucoes_repo.py  historico_repo.py  marcas_repo.py
app/services/: anexo_service.py  backup_service.py  devolucao_service.py  lixeira_service.py
app/ui/: layout.py
app/ui/assets/: app.css
app/ui/components/: badge_status.py  detalhe_devolucao.py  form_devolucao.py  pill_dropdown.py
app/ui/pages/: configuracoes.py  lista.py  lixeira.py  marcas.py
docs/superpowers/plans/: 2026-05-20-gerenciador-devolucoes.md  2026-05-21-frontend-redesign.md
docs/superpowers/specs/: 2026-05-20-gerenciador-devolucoes-design.md  2026-05-21-frontend-redesign.md
scripts/: seed_demo.py
tests/: conftest.py  test_anexo_service.py  test_anexos_repo.py  test_backup_service.py  test_config.py  test_devolucao_service.py  test_devolucoes_repo.py  test_lixeira_service.py  test_marcas_repo.py  test_schema.py
