[project]
name = "simonetto-devolucoes"
version = "0.1.0"
description = "Gerenciador de devoluções para a Loja Simonetto"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "sqlalchemy>=2.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pywebview>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
